# binarysearch

./: .gitignore  CMakeLists.txt  README.md  binary_search_large_file.c  read.c
src/: CMakeLists.txt  binary_search.c  binary_search.h  seq_search.h
src/binarysearchfile/: bin_search.c  seq_search.c
src/genbinfile/: check_bin_file.c  generate_bin_file.c
test/: CMakeLists.txt  binary_search_str_test.cc  binary_search_test  binary_search_test.cc
